feat: typescript types

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "entry": "src/index.js",
   "main": "index.js",
   "module": "index.mjs",
+  "types": "index.d.ts",
   "repository": "git@github.com:sebinsua/react-choices.git",
   "author": "Seb Insua <me@sebinsua.com>",
   "license": "MIT",
@@ -52,6 +53,7 @@
     "@commitlint/config-conventional": "^5.2.3",
     "@storybook/cli": "^3.3.3",
     "@storybook/react": "^3.3.3",
+    "@types/react": "^16.0.34",
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
